Finalizada la cabecera

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,3 +4,11 @@ body{
     color: deeppink;
     background-color: black;
 }
+
+.cabecera{
+    color: brown;
+    cursor: default;
+}
+.cabecera:hover{
+    color: pink;
+}
